--- a/main.css
+++ b/main.css
@@ -1,2 +1,48 @@
 /*CSS */
 /*more css */
+.rowjoe{
+    background-color: blue;
+    text-align: left;
+}
+a{
+    text-decoration: none;
+}
+
+.sleepy-img{
+    max-width: 300px;
+}
+
+
+
+
+/* .::""-,                      .::""-.
+  /::     \                    /::     \
+  |::     |   _..--""""--.._   |::     |
+  '\:.__ /  .'              '.  \:.__ /
+   ||____|.'                  '.||____|
+   ||:.  |                       |:.  |
+   ||:.  |                       |:.  |
+   ||:.  |                       |:.  |
+   ||:.  |  _..---"````````'---. |:.  |
+   ||:.  | `                     \:.  |
+   ||:.  |: :                .--._.-""-;
+   ||:.  |: : _.---``````---/    '.   _.`.
+   ||:.  | .-'  _,'```'-...'   _ .-'.'    '-.
+   ||:. .-'   .'        '. . '      '.      `'.
+   ||: ;.' .`'        _. '`'-.         '.   . ''-._
+   ||:. :   '.     .'          '.  . ' ' '.`       '._
+   ||:. :    '. .'     .::""-: .''.        ' .   . ' ' :::""-.
+   ||:. '     ..' .    /::     \    '.        . '.    /::     \
+   ||:  :  . .'      '.|::     |    _.:---""---.._'   |::     |
+   ||.  ;  .:          '\:.__ /   .'              '.   \:.__ /
+   ||:  ;  : '.       . ||____|_.'                  '._||____|
+   ||:  ;__:   '.   .'  ||:.  |                        ||:.  |
+   ||:___| \     '. :   ||:.  |                        ||:.  |
+   [[____]  '.     '.-._||:.  |                        ||:.  |
+              '.    :   ||:.  |                        ||:.  |
+                '.  :   ||:.  |                        ||:.  |
+                  '-:   ||:.  |                        ||:.  |
+                     '._||:.  |________________________||:.  |
+                        ||:___|'-.-'-.-'-.-'-.-'-.-'-.-||:___|
+                        [[____]                        [[____] */
+
